--- a/conduit-frontend/app-web/src/jsMain/resources/styles.css
+++ b/conduit-frontend/app-web/src/jsMain/resources/styles.css
@@ -1,5 +1,11 @@
 html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
     overflow: hidden;
-    margin: 0 !important;
-    padding: 0 !important;
+}
+
+#ConduitCanvas {
+    outline: none;
 }
